# Breakout

./: CMakeLists.txt  game.cpp  main.cpp  resourceLoader.cpp
include/errorHeaders/: invalidInput.hpp
include/gameHeaders/: game.h  gameLevel.h  gameObject.h  resourceLoader.h  spriteRenderer.h  texture.h
include/prefabs/: ball.hpp
include/shader/: shader.h
levels/: level1.txt  level2.txt  level3.txt  level4.txt  testLevel.txt
shaders/: fragmentShader.fs  vertexShader.vs
src/: ball.cpp  game.cpp  gameLevel.cpp  gameObject.cpp  main.cpp  shader.cpp  spriteRenderer.cpp  texture.cpp
